[package]
name = "mk"
version = "0.5.7"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = [
  "derive",
  "help",
  "usage",
  "error-context",
] }
clap_complete = "4.5.58"
colored = "3.0.0"
dialoguer = "0.12.0"
etcetera = "0.10.0"
ignore = "0.4.23"
regex = "1.12.1"
attohttpc = { version = "0.30.1", features = ["json", "tls-vendored"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
toml_edit = "0.23.7"
yaml-rust2 = "0.10.4"
indicatif = "0.18.0"

[dev-dependencies]
# Parametrized testing
rstest = "=0.26.1"

# CLI testing
assert_cmd = "=2.0.17"
predicates = "=3.1.3"

# Temporary directories for tests
tempfile = "=3.23.0"

# Test serialization
serial_test = "=3.2.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
